Adding flux architecture.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "height": 800
   },
   "dependencies": {
+    "fluxxor": "^1.5.1",
     "lodash": "^2.4.1",
-    "nedb": "^1.1.1",
     "react": "^0.12.2",
     "tinderjs": "^1.0.8"
   },
