Beautify by adding bootstrap.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "height": 800
   },
   "dependencies": {
+    "bootstrap": "^3.3.2",
     "fluxxor": "^1.5.1",
     "lodash": "^2.4.1",
     "react": "^0.12.2",
