Switch to alt. Eugh. Dunno how I feel about this.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "height": 800
   },
   "dependencies": {
+    "alt": "^0.16.10",
     "bootstrap": "^3.3.4",
-    "fluxxor": "^1.5.1",
     "lodash": "^3.9.3",
     "react": "^0.13.3",
     "tinderjs": "^1.0.8"
