--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.4",
     "classnames": "^2.1.2",
     "lodash": "^3.9.3",
+    "moment": "^2.10.3",
     "react": "^0.13.3",
     "reflux": "^0.2.8",
     "tinderjs": "^1.0.8"
