--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "scripts": {
     "build": "npm run build-js && npm run build-less",
-    "build-js": "babel js --out-dir build",
+    "build-js": "webpack",
     "build-less": "lessc less/main.less build/main.css"
   },
   "devDependencies": {
-    "babel": "^5.5.8"
+    "babel-loader": "^5.3.2",
+    "json-loader": "^0.5.2",
+    "webpack": "^1.10.5"
   }
 }
