--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "build-less": "lessc less/main.less build/main.css"
   },
   "devDependencies": {
+    "babel-core": "^5.8.20",
     "babel-loader": "^5.3.2",
     "json-loader": "^0.5.2",
     "webpack": "^1.10.5"
